packages/kit/test/apps/basics/src/routes/errors/load-status-without-error-client.svelte
<script context="module">
	export async function load() {
		if (typeof window !== 'undefined') {
			return { status: 401 };
		}
		return {};
	}
</script>
